--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="text-primary">Ballam</span>
                     </h1>
                     <div class="subheading mb-5">
-                        11848 Highland Oaks Drive · Highland, UT 84003 · (801) 319-1235 ·
+                        Living Near BYU · UT · (801) 319-1235 ·
                         <a href="mailto:Zack.Ballam@gmail.com">Zack.Ballam@gmail.com</a>
                     </div>
                     <p class="lead mb-5">I am a student at BYU majoring in Computer Science. I served a mission for the Church of Jesus Christ of Latter Day Saints in Rio de Janeiro, Brazil.</p>
