--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Besides my love for programming, I also love outdoor activities. I love to hike, ski, and to explore, and I play as much spikeball and pickleball as I can. I really enjoy being active.</p>
+                    <p class="mb-0">There are also many indoor activities that I enjoy. I love going to escape rooms, bowling, axe-throwing, and playing board games. I enjoy the challenge that puzzles bring me, and I love all activities where I get to spend time with my friends.</p>
                 </div>
             </section>
             <hr class="m-0" />
