--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                         <span class="text-primary">Ballam</span>
                     </h1>
                     <div class="subheading mb-5">
-                        PROVO · UT · (801) 319-1235 ·
+                        PROVO · UT <!-- · (801) 319-1235 ·
                         <a href="mailto:Zack.Ballam@gmail.com">Zack.Ballam@gmail.com</a>
+                        -->
                     </div>
                     <p class="lead mb-5">I am a student at BYU majoring in Computer Science. I served a mission for the Church of Jesus Christ of Latter Day Saints in Rio de Janeiro, Brazil.</p>
                     <div class="social-icons">
@@ -167,37 +168,31 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            Eagle Scout
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Microsoft Technology Associate, Introduction to Programming using Python - 2020
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Participated in nationally ranked (finished 1st each year) Jazz Bands over 5 years - 2016-2021
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            <!--
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            -->
+                            "Best of State" Winner - Youth Instrumental Group (Arts & Entertainment) - 2018
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            41st Annual National Downbeat Student Music Awards Winner - Little Big Band - 2018
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            "Best of State" Winner - Youth Instrumental Group (Arts & Entertainment) - 2017
                         </li>
                     </ul>
                 </div>
